# omnidapter

./: .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  omnidapter.code-workspace  pyproject.toml
omnidapter-core/: README.md  SPEC.md  pyproject.toml
omnidapter-core/docs/: booking.md  credential-stores.md  providers.md
omnidapter-core/src/omnidapter/: __init__.py
omnidapter-core/tests/: conftest.py  test_acuity_booking.py  test_apple_provider.py  test_auth_models.py  test_calcom_booking.py  test_caldav_calendar.py  test_calendly_booking.py  test_connection.py  test_errors.py  test_housecallpro_booking.py  test_housecallpro_crm.py  test_hubspot_crm.py  test_jobber_booking.py  test_jobber_crm.py  test_memory_stores.py  test_microsoft_booking.py  test_microsoft_calendar.py  test_oauth_transport.py  test_pipedrive_crm.py  test_registry.py  test_salesforce_crm.py  test_square_booking.py  test_zoho_booking.py  test_zoho_calendar.py  test_zoho_crm.py
omnidapter-core/tests/integration/: .env.example  README.md  conftest.py  test_acuity_booking.py  test_apple.py  test_calcom_booking.py  test_caldav.py  test_calendly_booking.py  test_google.py  test_housecallpro_booking.py  test_jobber_booking.py  test_microsoft.py  test_microsoft_booking.py  test_square_booking.py  test_zoho.py  test_zoho_booking.py
omnidapter-hosted/: .env.example  Dockerfile  SPEC.md  alembic.ini  docker-compose.yml  pyproject.toml
omnidapter-hosted/alembic/: env.py
omnidapter-hosted/alembic/versions/: 0001_hosted_initial.py  0002_hosted_extensions.py  0002_hosted_link_tokens.py  0003_connect_extensions.py  0003_hosted_link_token_companion.py  0004_remove_connection_fk_constraints.py  1269112d56f4_hosted_initial.py
omnidapter-hosted/src/omnidapter_hosted/: config.py  database.py  dependencies.py  main.py
omnidapter-hosted/tests/: conftest.py
omnidapter-hosted/tests/integration/: conftest.py  test_auth.py  test_auth_hosted.py  test_calendar.py  test_calendar_hosted.py  test_connect_hosted.py  test_connections.py  test_dashboard.py  test_health.py  test_link_tokens.py  test_provider_configs.py  test_tenants.py
omnidapter-hosted/tests/unit/: test_auth.py  test_auth_flows.py  test_billing.py  test_calendar_router.py  test_config_and_main.py  test_connect_router.py  test_connect_service.py  test_connections_router.py  test_dashboard_service.py  test_dependencies.py  test_link_token_service.py  test_link_tokens_router.py  test_models.py  test_provider_config_flows.py  test_provider_configs_router.py  test_provider_registry.py  test_providers_router.py  test_routers.py  test_usage.py
omnidapter-sdk/: README.md  pyproject.toml
omnidapter-sdk/omnidapter_sdk/: __init__.py  api_client.py  client.py  configuration.py  exceptions.py  rest.py
omnidapter-sdk/omnidapter_sdk/api/: __init__.py  calendar_api.py  connections_api.py  link_tokens_api.py  providers_api.py
omnidapter-sdk/omnidapter_sdk/auth/: client.py
omnidapter-sdk/omnidapter_sdk/calendar/: __init__.py  client.py
omnidapter-sdk/omnidapter_sdk/connect/: client.py
omnidapter-sdk/omnidapter_sdk/connections/: client.py
omnidapter-sdk/omnidapter_sdk/core/: http_client.py  pydantic_utilities.py  serialization.py
omnidapter-sdk/omnidapter_sdk/dashboard/: client.py
omnidapter-sdk/omnidapter_sdk/link_tokens/: client.py
omnidapter-sdk/omnidapter_sdk/models/: __init__.py  attendee.py  attendee_status.py  conference_data.py  conference_entry_point.py  connect_create_connection_request.py  connect_session_request.py  create_calendar_request.py  create_connection_request.py  create_event_request.py  create_link_token_request.py  end.py  end1.py  event_status.py  http_validation_error.py  location_inner.py  original_start_time.py  reauthorize_connection_request.py  recurrence.py  reminder.py  reminder_override.py  start.py  start1.py  update_calendar_request.py  update_event_request.py  validation_error.py
omnidapter-sdk/omnidapter_sdk/oauth/: client.py
omnidapter-sdk/omnidapter_sdk/provider_configs/: client.py
omnidapter-sdk/omnidapter_sdk/providers/: client.py
omnidapter-sdk/omnidapter_sdk/tests/: conftest.py  test_auth.py  test_calendar.py  test_connect.py  test_connections.py  test_dashboard.py  test_link_tokens.py  test_oauth.py  test_provider_configs.py  test_providers.py  test_root.py  utilities.py
omnidapter-sdk/omnidapter_sdk/types/: __init__.py  attendee.py  attendee_status.py  conference_data.py  conference_entry_point.py  event_status.py  recurrence.py  recurrence_original_start_time.py  reminder.py  reminder_override.py  upsert_provider_config_request.py  validation_error.py
omnidapter-sdk/tests/: conftest.py  test_booking.py  test_calendar.py  test_connections.py  test_link_tokens.py  test_providers.py
omnidapter-server/: .env.example  Dockerfile  SPEC.md  docker-compose.yml  pyproject.toml
omnidapter-server/alembic/versions/: 0001_initial_schema.py  0002_link_token_services.py  0002_link_tokens.py  0003_connect_session.py  2d7ed925ab68_initial_schema.py
omnidapter-server/docs/: README.md  api-reference.md  architecture.md  configuration.md  database.md  deployment.md  encryption.md  errors.md  examples.md  getting-started.md  index.md  migrations.md  oauth.md  observability.md  operations.md  testing.md  usage-metering.md
omnidapter-server/src/omnidapter_server/: config.py  database.py  dependencies.py  encryption.py  errors.py  main.py  origin_policy.py  provider_registry.py
omnidapter-server/tests/: conftest.py
omnidapter-server/tests/integration/: conftest.py  test_api_key_lifecycle.py  test_calendar_proxy.py  test_connect_session.py  test_connection_crud.py  test_connection_health.py  test_global_access.py  test_oauth_flow.py  test_provider_config.py  test_usage_recording.py
omnidapter-server/tests/unit/: test_auth_service.py  test_booking_flows.py  test_booking_router_helpers.py  test_calendar_flows.py  test_calendar_router_helpers.py  test_common.py  test_config.py  test_connect_router.py  test_connect_service.py  test_connection_flows.py  (+19 more)
(+431 files in other folders)
