[project]
name = "omnidapter-workspace"
version = "0.0.0"
requires-python = ">=3.10"

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.21",
    "tzdata>=2025.2",
    "ruff==0.15.7",
    "pyright>=1.1.408",
    "mypy>=1.10",
    "poethepoet>=0.31.1",
]

[tool.poe.tasks.format]
help = "Format code with Ruff"
cmd = "ruff format ."

[tool.poe.tasks.lint]
help = "Run Ruff lint checks"
cmd = "ruff check ."

[tool.poe.tasks.typecheck]
help = "Run Pyright type checks"
cmd = "pyright"

[tool.poe.tasks.build]
help = "Build all workspace packages"
cmd = "uv build --all-packages"

[tool.poe.tasks.test]
help = "Run full test suite"
cmd = "pytest"

[tool.poe.tasks.check]
help = "Run format, lint, typecheck, tests, and builds"
sequence = ["format", "lint", "typecheck", "build", "test"]

[tool.poe.tasks.test-integration-core]
help = "Run Omnidapter Core integration tests"
cmd = "uv run --env-file packages/omnidapter-core/tests/integration/.env pytest packages/omnidapter-core/tests/integration"

[tool.poe.tasks.test-integration-server]
help = "Run Omnidapter Server integration tests. Run `docker-compose --profile test up` to start dev db."
cmd = "uv run --env-file apps/omnidapter-server/.env pytest apps/omnidapter-server/tests/integration"

[tool.poe.tasks.test-integration]
help = "Run Integration Tests"
sequence = ["test-integration-core", "test-integration-server"]

[tool.poe.tasks.server-infra]
help = "Start backend infra: db, migration"
cmd = "docker-compose -f apps/omnidapter-server/docker-compose.yml up --build"

[tool.poe.tasks.server-dev]
help = "Start Omnidapter Server"
cmd = "uv run --env-file apps/omnidapter-server/.env omnidapter-server"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["packages/omnidapter-core/tests", "apps/omnidapter-server/tests", "apps/omnidapter-hosted/tests"]
markers = [
    "integration: marks tests requiring live provider credentials; set OMNIDAPTER_INTEGRATION=1 to enable",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"apps/omnidapter-server/alembic/versions/*.py" = ["I001", "UP007", "UP035"]

[tool.ruff.format]
exclude = ["apps/omnidapter-server/alembic/versions/*.py"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = [
    "apps/omnidapter-server/src",
    "apps/omnidapter-hosted/src",
    "packages/omnidapter-core/src"
]
