[project]
name = "omnidapter-workspace"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "omnidapter",
    "omnidapter-server",
    "omnidapter-hosted",
    "omnidapter-sdk",
]

[tool.uv.workspace]
members = ["omnidapter-*"]

[tool.uv.sources]
omnidapter = { workspace = true }
omnidapter-server = { workspace = true }
omnidapter-hosted = { workspace = true }
omnidapter-sdk = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "respx>=0.21",
    "tzdata>=2025.2",
    "ruff==0.15.7",
    "pyright>=1.1.408",
    "mypy>=1.10",
    "poethepoet>=0.31.1",
    "testcontainers[postgres,redis]>=4.14.2",
]

[tool.poe.tasks.format]
help = "Format code with Ruff"
cmd = "ruff format ."

[tool.poe.tasks.lint]
help = "Run Ruff lint checks"
cmd = "ruff check ."

[tool.poe.tasks.typecheck]
help = "Run Pyright type checks"
cmd = "pyright"

[tool.poe.tasks.build]
help = "Build all workspace packages"
cmd = "uv build --all-packages"

[tool.poe.tasks.test]
help = "Run all unit tests"
cmd = "pytest"

[tool.poe.tasks.check]
help = "Run format, lint, typecheck, tests, and builds"
sequence = ["format", "lint", "typecheck", "build", "test"]

[tool.poe.tasks.test-integration]
help = "Run all integration tests using TestContainers. Requires docker"
cmd = "pytest -m integration"

[tool.poe.tasks.test-integration-core]
help = "Run core integration tests against live providers (requires .env)"
cmd = "pytest omnidapter-core/tests/integration -m integration"
envfile = "omnidapter-core/tests/integration/.env"

[tool.poe.tasks.server-infra]
help = "Start backend infra: db, migration"
cmd = "docker-compose -f omnidapter-server/docker-compose.yml up --build"

[tool.poe.tasks.server-dev]
help = "Start Omnidapter Server"
cmd = "uv run --env-file omnidapter-server/.env omnidapter-server"

[tool.poe.tasks.hosted-infra]
help = "Start hosted infra: db, redis, migration"
cmd = "docker-compose -f omnidapter-hosted/docker-compose.yml up --build"

[tool.poe.tasks.hosted-dev]
help = "Start Omnidapter Hosted"
cmd = "uv run --env-file omnidapter-hosted/.env omnidapter-hosted"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib -m 'not integration'"
filterwarnings = [
    # testcontainers uses @wait_container_is_ready internally — their issue, not ours
    "ignore::DeprecationWarning:testcontainers",
]
testpaths = ["omnidapter-core/tests", "omnidapter-server/tests", "omnidapter-hosted/tests"]
markers = ["integration: integration tests requiring Docker or real providers"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["**/alembic/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.format]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = [
    "omnidapter-server/src",
    "omnidapter-hosted/src",
    "omnidapter-core/src"
]
