[project]
name = "omnidapter"
version = "0.1.0"
description = "Provider-agnostic async integration library"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnidapter"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pyright]
venvPath = ".."
venv = ".venv"
extraPaths = ["src"]
include = ["src", "tests"]
