[project]
name = "omnidapter"
version = "0.4.1"
description = "Provider-agnostic async integration library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[project.urls]
Homepage = "https://github.com/heckerlabs/omnidapter"
Repository = "https://github.com/heckerlabs/omnidapter/tree/main/omnidapter-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnidapter"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.pyright]
venvPath = ".."
venv = ".venv"
extraPaths = ["src"]
include = ["src", "tests"]
