[project]
name = "omnidapter-hosted"
version = "0.1.0"
description = "Omnidapter Hosted — multi-tenant SaaS layer on top of omnidapter-server"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "omnidapter-server",
    "omnidapter",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "cryptography>=42.0",
    "bcrypt>=4.0",
    "httpx>=0.27",
    "redis[asyncio]>=5.0",
    "workos>=5.0",
]

[project.scripts]
omnidapter-hosted = "omnidapter_hosted.main:run"

[tool.uv.sources]
omnidapter = { workspace = true }
omnidapter-server = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omnidapter_hosted"]

[tool.pyright]
venvPath = ".."
venv = ".venv"
include = ["src", "tests"]
pythonVersion = "3.10"

[tool.poe.tasks.dev]
help = "Start Omnidapter Hosted (local)"
cmd = "uv run --env-file .env omnidapter-hosted"

[tool.poe.tasks.test]
help = "Run tests"
cmd = "uv run --env-file .env pytest"

[tool.poe.tasks.infra]
help = "Start infra: db, redis, migrate"
cmd = "docker compose up --build"
