[project]
name = "omnidapter-sdk"
version = "0.0.0"
description = "Omnidapter API client SDK"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "urllib3>=1.25.3",
    "python-dateutil>=2.8.2",
    "pydantic>=1.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnidapter_sdk"]
