[project]
name = "omnidapter-sdk"
version = "0.3.2"
description = "Omnidapter API client SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "urllib3>=1.25.3",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "testcontainers[postgres]>=4.0",
    "uvicorn>=0.30",
    "omnidapter-server",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnidapter_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
